# lado

./: .gitignore  CLAUDE.md  Cargo.toml  Justfile  README.md  rust-analyzer.toml
.beads/: beads.left.jsonl  beads.left.meta.json  issues.jsonl  metadata.json
completions/: _lado  lado.bash
docs/plans/: 2026-02-17-compact-file-tree-design.md
docs/specs/: 2026-04-01-viewed-and-help-plan.md  2026-04-01-viewed-checkbox-and-help-popup.md
src/: app.rs  cli.rs  config.rs  github.rs  main.rs  viewed_state.rs
src/git/: diff.rs  file_tree.rs  mod.rs  repository.rs
src/highlighting/: mod.rs  syntax.rs  theme.rs  tree_sitter_hl.rs
src/highlighting/queries/: slint-highlights.scm
src/models/: commit_model.rs  diff_model.rs  file_tree_model.rs  mod.rs  span_model.rs
src/ui/: adapters.rs  callbacks.rs  mod.rs
themes/: doom-solarized-light.tmTheme
ui/: main.slint  structs.slint  theme.slint
ui/components/: commit_list.slint  diff_view.slint  file_tree.slint  help_overlay.slint  settings_panel.slint  side_by_side.slint  toolbar.slint  unified.slint
