[package]
name = "lado"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lado"
path = "src/main.rs"

[dependencies]
slint = "1.14"
git2 = "0.20"
syntect = { version = "5.3", default-features = false, features = ["default-syntaxes", "default-themes", "regex-fancy", "plist-load"] }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
anyhow = "1.0"
thiserror = "2.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
dirs = "6.0"
tree-sitter = "0.26"
tree-sitter-highlight = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.25"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-bash = "0.25"
tree-sitter-java = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-css = "0.25"
tree-sitter-html = "0.23"
tree-sitter-json = "0.24"
tree-sitter-toml-ng = "0.7"
tree-sitter-yaml = "0.7"
tree-sitter-slint = "0.24"

[build-dependencies]
slint-build = "1.14"
